# 12_localAgent

./: .dockerignore  .env.development  .env.example  .env.production  .gitattributes  .github_refresh  .gitignore  02_practice12_localAgentcookies.txt  =0.19.0  ACCEPTANCE_TEST_REPORT.md  AGENT_TEST_GUIDE.md  CLAUDE.md  DBeaver_연결_가이드.md  DEPLOYMENT.md  DOCKER_TEST_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_GUIDE.md  PHASE5_COMPLETE.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICKSTART_LOCAL.md  QUICK_TEST_INSTRUCTIONS.md  REACT_VS_MULTIAGENT.md  README.md  SECURITY_REVIEW.md  T204A_FINAL_REPORT.md  T204A_OPTIMIZATION_RESULTS.md  UI_MANUAL_TEST_GUIDE.md  VERIFICATION_RESULTS.md  cookies.txt  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  rebuild.bat  start-local-dev.bat  start-mvp.bat  start.bat  stop-mvp.bat  (+14 more)
backend/: .env.example  .flake8  .gitignore  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_acceptance.py  test_llama_load.py  test_metrics.py  test_offline_embedding_loading.py  test_offline_model_loading.py  verify_python_dependencies.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_response_time_tracking.py  003_clarification_2025_10_28.py  004_add_user_lockout_fields.py  20251101_1613_f4412ac279b2_add_missing_tables_admin_.py  20251102_add_metrics_tables.py  20251104_remove_admin_table.py  (+1 more)
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/data/: LORA_TRAINING_README.md  korean_holidays.json  lora_training_dataset.jsonl  safety_filter_test_dataset.json
backend/prompts/: citizen_support.txt  data_analysis.txt  document_writing.txt  legal_research.txt  orchestrator_few_shot.txt  review.txt
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_admin_auth.py  test_cookie_security.py  test_csrf.py  test_csrf_exemptions.py  test_csrf_optimization.py  test_csrf_stability.py  test_encoding.py  test_metric_consistency.py  test_metrics_accuracy.py  test_prometheus_metrics.py  test_resource_limits.py
(+300 files in other folders)
